--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin:0;
   padding:0;
 }
@@ -7,73 +7,147 @@ body {
   font-family: "Avenir Next";
 }
 
-header {
-    width: 100%;
-    height: 10vh;
-    background-color: #26d0c9;
-    color: #fff;
+nav {
+  width: 100vw;
+  background-color: #26d0c9;
+  color: #fff;
+  overflow: hidden;
+  position: fixed;
+  text-align: center;
 }
 
-.header-logo{
+.header-logo {
+  border-radius: 90px;
+  font-size: 30px;
   float:left;
-  padding: 20px 10px;
+  padding: 20px 20px;
 }
 
-.header-list{
-  float:right;
-  padding: 20px 10px;
+.img{
+  width: 5vw;
+  height: 5vh;
+  text-align: center;
 }
 
-li{
+nav li {
+  margin-top: 10px;
+  padding: 20px 20px;
+  display: block;
   float: right;
   list-style-type: none;
-  margin: 20px 10px;
+  border-radius: 90px;
+  text-decoration: underline;
 }
 
-.top{
-    background-image: url(../img/earth.jpg);
-    background-size: cover;
-    width: 100vw;
-    height: 90vh;
+nav a {
+  text-decoration: none;
+  color: #ffffff;
+  display: block;
+  transition: 1s;
 }
 
-.vision{
-  position: absolute;
+nav a:hover {
+  background: #ffffff;
+  color: #000000;
+}
+
+.top {
+  background-image: url(../img/earth.jpg);
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
+.vision {
   text-align: center;
-  font-size:100px;
+  font-size:200px;
   color: #FFFFFF;
+  height: 50vh;
+  padding-top: 100px;
+  text-shadow: 2px 2px 1px #000, -2px 2px 1px #000, 2px -2px 1px #000, -2px -2px 1px #000;
 }
 
-.AmI{
-    color:#FFF;
-    background-image: url(../img/hud.jpg);
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
+.AmI {
+  color:#FFF;
+  background-image: url(../img/hud.jpg);
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
 }
 
-.Web{
-    background-image: url(../img/web.png);
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
+.AmI p {
+  padding-top: 10px;
+  text-align: center;
+  font-size: 20px;
 }
 
-.contact{
-    background-image: url(../img/contact.jpg);
-    background-size: cover;
-    width: 100vw;
-    height: 50vh;
+.space {
+  width: 100vw;
+  height: 70vh;
+}
+
+.AmI li {
+  padding: 20px 20px;
+  border:
+}
+
+.Web {
+  background-image: url(../img/web.png);
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+}
+
+.Web p {
+  text-align: center;
+  font-size: 20px;
+}
+
+.Web li {
+  margin: 30px 30px;
+  width: 10vw;
+  height: 10vh;
+  float:left;
+  list-style-type: none;
+  background-color: #FFF;
+  text-align: center;
+  padding-top: auto;
+  border-radius: 90px;
+  border-color: #000;
+}
+
+.contact {
+  background-image: url(../img/contact.jpg);
+  width: 100vw;
+  height: 50vh;
+}
+
+.contact li {
+  margin: auto;
+  text-align: center;
+  list-style-type: none;
+  float: left;
+  width: 200px;
+  height: 200px;
+  background-color: #000;
+  border: 1px solid #FFF;
+}
+
+.contact li a {
+  -webkit-transition: 0.3s;
+}
+
+.contact li a:hover {
+  -webkit-transition: 0.3s;
+  opacity: 0.2;
 }
 
 footer {
-    letter-spacing: 3px;
-    font-size: 1.5rem;
-    text-align: center;
-    line-height: 150px;
-    color: #000;
-    height: 150px;
-    font-family: 'Open Sans Condensed', sans-serif;
+  letter-spacing: 3px;
+  font-size: 1.5rem;
+  text-align: center;
+  line-height: 10px;
+  color: #000;
+  height: 10px;
+  font-family: 'Open Sans Condensed', sans-serif;
 }
-
-
