--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ nav a:hover {
 }
 
 .contact {
-  background-image: url(../img/contact.jpg);
+  background-image: url(../img/contact.png);
   width: 100vw;
   height: 50vh;
 }
