--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 nav {
-  width: 100vw;
+  width: 100%;
   background-color: #26d0c9;
   color: #fff;
   overflow: hidden;
@@ -17,15 +17,17 @@ nav {
 }
 
 .header-logo {
+  background-image: url(../img/basic.png);
+  background-size: cover;
   border-radius: 90px;
   font-size: 30px;
   float:left;
   padding: 20px 20px;
 }
 
-.img{
-  width: 5vw;
-  height: 5vh;
+.img {
+  width: 5%;
+  height: 5%;
   text-align: center;
 }
 
@@ -60,87 +62,179 @@ nav a:hover {
 
 .vision {
   text-align: center;
-  font-size:200px;
+  font-size: 200px;
   color: #FFFFFF;
   height: 50vh;
   padding-top: 100px;
   text-shadow: 2px 2px 1px #000, -2px 2px 1px #000, 2px -2px 1px #000, -2px -2px 1px #000;
+  animation: passing_7595 10s linear infinite;
+  transform-origin: 50% 50%;
+}
+
+
+@keyframes passing_7595 {
+  0% { transform:translateX(-50%); opacity:0 }
+  25% { transform:translateX(0%); opacity:1 }
+  50% { transform:translateX(50%); opacity:0 }
+  100% { transform:translateX(50%); opacity:0 }
 }
 
 .AmI {
   color:#FFF;
   background-image: url(../img/hud.jpg);
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 .AmI p {
-  padding-top: 10px;
+  padding-top: 7%;
   text-align: center;
-  font-size: 20px;
-}
-
-.space {
-  width: 100vw;
-  height: 70vh;
+  font-size: 50px;
+  margin-bottom: 20%;
+  text-shadow: 2px 2px 1px #00FFFF, -2px 2px 1px #00FFFF, 2px -2px 1px #00FFFF, -2px -2px 1px #00FFFF;
 }
 
 .AmI li {
-  padding: 20px 20px;
-  border:
+  margin: 5% 0;
+  padding: 10px 20px;
+  position: relative;
+  width: 10%;
+  height: 7%;
+  left: 10%;
+  right: auto;
+  text-align: center;
+  background-color: #00FFFF;
+  list-style-type: none;
+}
+
+.shake {
+  animation: shake_2618 2.875s ease infinite;
+  transform-origin: 50% 50%;
+}
+
+@keyframes shake_2618 {
+  0% { transform:rotate(-12deg) }
+  6.95652% { transform:rotate(12deg) }
+  8.69565% { transform:rotate(24deg) }
+  15.65217% { transform:rotate(-24deg) }
+  17.39131% { transform:rotate(-24deg) }
+  24.34782% { transform:rotate(24deg) }
+  26.08696% { transform:rotate(24deg) }
+  33.04348% { transform:rotate(-24deg) }
+  34.78261% { transform:rotate(-24deg) }
+  41.73913% { transform:rotate(24deg) }
+  43.47826% { transform:rotate(24deg) }
+  50.43478% { transform:rotate(-24deg) }
+  52.17391% { transform:rotate(-24deg) }
+  59.13044% { transform:rotate(24deg) }
+  65.21739% { transform:rotate(0deg) }
+  100% { transform:rotate(0deg) }
 }
 
 .Web {
   background-image: url(../img/web.png);
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 .Web p {
+  padding-top: 7%;
   text-align: center;
+  font-size: 50px;
+  text-shadow: 2px 2px 1px #FF0000, -2px 2px 1px #FF0000, 2px -2px 1px #FF0000, -2px -2px 1px #FF0000;
+}
+
+.float {
+  animation: float_7879 3s linear infinite;
+  transform-origin: 50% 50%;
+}
+
+@keyframes float_7879 {
+  0% { transform: translateY(0) }
+  33.33333% { transform: translateY(-6px) }
+  66.66667% { transform: translateY(0) }
+  100% { transform: translateY(0) }
+}
+
+.Web a{
+  color: #FFF;
   font-size: 20px;
+  text-shadow: 2px 2px 1px #FF0000, -2px 2px 1px #FF0000, 2px -2px 1px #FF0000, -2px -2px 1px #FF0000;
 }
 
 .Web li {
-  margin: 30px 30px;
-  width: 10vw;
-  height: 10vh;
-  float:left;
+  margin: 5% 6.5%;
+  padding: 50px 0;
+  width: 20%;
+  height: 0%;
   list-style-type: none;
   background-color: #FFF;
   text-align: center;
-  padding-top: auto;
   border-radius: 90px;
   border-color: #000;
+  float: left;
+  color: #000;
 }
 
-.contact {
+.Youtube {
+  background-image: url(../img/youtube.jpg);
+  background-size: cover;
+  width: 100%;
+}
+
+.Blog {
+ background-image: url(../img/basic.png);
+ background-size: cover;
+ width: 100%;
+}
+
+.Media {
+  background-image: url(../img/media.jpg);
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  text-align: center;
+}
+
+.Hitchhike {
+  background-image: url(../img/hitchhike.jpg);
+    background-position: center;
+  background-size: cover;
+  width: 100%;
+}
+
+.Contact {
   background-image: url(../img/contact.png);
-  width: 100vw;
+  background-size: cover;
   height: 50vh;
+  padding-top: 7%;
 }
 
-.contact li {
-  margin: auto;
+.Contact p{
+  text-align: center;
+  font-size: 50px;
+}
+
+.Contact li {
+  margin:0 17%;
   text-align: center;
   list-style-type: none;
   float: left;
   width: 200px;
   height: 200px;
+  color: #00FFFF;
   background-color: #000;
   border: 1px solid #FFF;
+  font-size: 100px;
 }
 
-.contact li a {
-  -webkit-transition: 0.3s;
+.Contact i {
+  padding-top: 20%;
+  color: #00FFFF;
 }
 
-.contact li a:hover {
-  -webkit-transition: 0.3s;
-  opacity: 0.2;
-}
 
 footer {
   letter-spacing: 3px;
