--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ nav a:hover {
 
 .top {
   background-image: url(../img/earth.jpg);
+  background-position: center;
   text-align: center;
   background-size: cover;
   width: 100vw;
@@ -109,6 +110,7 @@ nav a:hover {
 
 .Web {
   background-image: url(../img/web.png);
+  background-position: center;
   text-align: center;
   background-size: cover;
   width: 100%;
@@ -197,6 +199,7 @@ nav a:hover {
 
 .Contact {
   background-image: url(../img/contact.png);
+  background-position: center;
   text-align: center;
   background-size: cover;
   height: 50vh;
